<resources>
    <string name="app_name">Mindlessly Hiragana</string>
    <string name="mindlessly_hiragana">Mindlessly Hiragana</string>
    <string name="test_all_learned">Test All Learned</string>
    <string name="x_category_locked">%1$s category locked</string>
    <string name="x_category_unlocked">%1$s category unlocked</string>
    <string name="learn">Learn</string>
    <string name="navigate_back">Navigate back</string>
    <string name="learning_sets_n_sets">Learning Sets: %1$d Sets</string>
    <string name="learning_sets">Learning Sets</string>
    <string name="remaining_n">Remaining: %1$d</string>
    <string name="remaining">Remaining</string>
    <string name="result">Result</string>
    <string name="challenge_all_correct_on_learn">Challenge All Correct On Learn</string>
    <string name="including">Including:</string>
    <string name="test_categories_n">Test Categories: %1$s</string>
    <string name="try_again">Try Again</string>
    <string name="correct_n">Correct: %1$d</string>
    <string name="incorrect_n">Incorrect: %1$d</string>
    <string name="continue_learning">Continue Learning</string>
    <string name="incorrect_hiragana">Incorrect Hiragana:</string>
    <string name="open_menu">Open menu</string>
    <string name="reset_progress">Reset Progress</string>
    <string name="reset">Reset</string>
    <string name="cancel">Cancel</string>
    <string name="reset_dialog_text">Reset Progress will reset back your progress to かせひみ and lock the other sets back.</string>
    <string name="incorrect_counts">Incorrect Counts</string>
    <string name="license_information">License information</string>
</resources>
