package com.kaishijak.mindlesslyhiragana.data.model

enum class Hiragana(val kana: String) {
    // Vowels
    A("あ"),
    I("い"),
    U("う"),
    E("え"),
    O("お"),

    // K-line
    KA("か"),
    KI("き"),
    KU("く"),
    KE("け"),
    KO("こ"),

    // S-line
    SA("さ"),
    SHI("し"),
    SU("す"),
    SE("せ"),
    SO("そ"),

    // T-line
    TA("た"),
    CHI("ち"),
    TSU("つ"),
    TE("て"),
    TO("と"),

    // N-line
    NA("な"),
    NI("に"),
    NU("ぬ"),
    NE("ね"),
    NO("の"),

    // H-line
    HA("は"),
    HI("ひ"),
    FU("ふ"),
    HE("へ"),
    HO("ほ"),

    // M-line
    MA("ま"),
    MI("み"),
    MU("む"),
    ME("め"),
    MO("も"),

    // Y-line
    YA("や"),
    YU("ゆ"),
    YO("よ"),

    // R-line
    RA("ら"),
    RI("り"),
    RU("る"),
    RE("れ"),
    RO("ろ"),

    // W-line + N
    WA("わ"),
    WO("を"),
    N("ん");
}
